--- a/app/src/main/res/layout/activity_appraisal_report.xml
+++ b/app/src/main/res/layout/activity_appraisal_report.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,71 +12,150 @@
 
 
     <LinearLayout
-        android:background="#fff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="20dp"
+        android:background="#fff"
         android:orientation="vertical"
         android:padding="20dp">
-
-
-        <ImageView
-            android:id="@+id/btn_appraisal_backpress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:orientation="vertical">
-
-            <TextView
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_gravity="center"
+                android:id="@+id/btn_appraisal_backpress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:text="감정평가서"
-                android:textSize="50dp"
-                android:textStyle="bold" />
+                android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />
 
-            <TextView
+
+
+                <TextView
+                    android:gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="12dp"
+                    android:text="감정평가서"
+                    android:textSize="36dp"
+                    android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:orientation="vertical"
+            android:weightSum="100">
+
+            <TableLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="50dp"
-                android:background="@drawable/login_borderbox"
-                android:backgroundTint="#4585FF"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="감정가"
-                android:textColor="#FFFFFF"
-                android:textSize="40dp" />
+                android:layout_height="match_parent"
+                android:layout_margin="6dp"
+                android:padding="8dp"
+                android:stretchColumns="*"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:background="@drawable/login_borderbox"
-                android:backgroundTint="#4585FF"
-                android:padding="10dp"
-                android:text="감정 평가 일자"
-                android:textColor="#FFFFFF"
-                android:textSize="40dp" />
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:background="#FFFFFF"
+                    android:weightSum="100">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:background="@drawable/login_borderbox"
-                android:backgroundTint="#4584FF"
-                android:padding="10dp"
-                android:text="감정 평가 업체"
-                android:textColor="#FFFFFF"
-                android:textSize="40dp" />
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="45"
+                        android:background="@drawable/login_borderbox"
+                        android:backgroundTint="#4585FF"
+                        android:padding="4dp"
+                        android:text="감정가"
+                        android:textColor="#FFF"
+                        android:textSize="18dp" />
 
+                    <TextView
+                        android:id="@+id/appraisal_1"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="55"
+                        android:background="@drawable/tablelayout_line"
+                        android:gravity="center"
+                        android:text="정보"
+                        android:textSize="18dp" />
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:weightSum="100">
+
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="45"
+                        android:background="@drawable/login_borderbox"
+                        android:backgroundTint="#4585FF"
+                        android:padding="4dp"
+                        android:text="감정 평가 일자"
+                        android:textColor="#FFF"
+                        android:textSize="18dp" />
+
+                    <TextView
+                        android:id="@+id/appraisal_2"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="55"
+                        android:background="@drawable/tablelayout_line"
+                        android:gravity="center"
+                        android:text="정보"
+                        android:textSize="18dp" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:weightSum="100">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="45"
+                        android:background="@drawable/login_borderbox"
+                        android:backgroundTint="#4585FF"
+                        android:padding="4dp"
+                        android:text="감정 평가 업체"
+                        android:textColor="#FFF"
+                        android:textSize="18dp" />
+
+                    <TextView
+                        android:id="@+id/appraisal_3"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="55"
+                        android:background="@drawable/tablelayout_line"
+                        android:gravity="center"
+                        android:text="정보"
+                        android:textSize="18dp" />
+                </TableRow>
+            </TableLayout>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
