--- a/app/src/main/res/layout/activity_fragment1.xml
+++ b/app/src/main/res/layout/activity_fragment1.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="공매 일정"
+        android:text="메뉴"
         android:textSize="40dp"
         android:layout_gravity="center"/>
 
