--- a/app/src/main/res/layout/activity_fragment3.xml
+++ b/app/src/main/res/layout/activity_fragment3.xml
@@ -191,18 +191,29 @@
                     android:text="○ 전체 목록" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
+                <com.airbnb.lottie.LottieAnimationView
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="100dp"
+                    android:id="@+id/animation_view"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    app:lottie_autoPlay="true"
+                    app:lottie_fileName="load.json"
+                    app:lottie_loop="true" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
-
 
 
         </LinearLayout>
