--- a/app/src/main/res/layout/activity_gradle1.xml
+++ b/app/src/main/res/layout/activity_gradle1.xml
@@ -80,8 +80,7 @@
             android:id="@+id/viewPager_grid"
             android:layout_weight="83"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            />
+            android:layout_height="0dp" />
 
 
 
