--- a/app/src/main/res/layout/activity_gradle3.xml
+++ b/app/src/main/res/layout/activity_gradle3.xml
@@ -76,6 +76,17 @@
                 android:orientation="horizontal" />
 
         </LinearLayout>
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_marginTop="200dp"
+            android:layout_marginBottom="100dp"
+            android:id="@+id/animation_view_gradle3"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="load.json"
+            app:lottie_loop="true" />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_grid3"
             android:layout_width="match_parent"
