--- a/app/src/main/res/layout/activity_gradle6.xml
+++ b/app/src/main/res/layout/activity_gradle6.xml
@@ -37,6 +37,17 @@
         android:layout_weight="90"
         android:layout_width="match_parent"
         android:layout_height="0dp">
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_marginTop="200dp"
+            android:layout_marginBottom="100dp"
+            android:id="@+id/animation_view_gradle6"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="load.json"
+            app:lottie_loop="true" />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_grid6"
             android:layout_width="match_parent"
