--- a/app/src/main/res/layout/activity_new_list.xml
+++ b/app/src/main/res/layout/activity_new_list.xml
@@ -39,6 +39,17 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp">
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_marginTop="200dp"
+            android:layout_marginBottom="100dp"
+            android:id="@+id/animation_view_newlist"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="load.json"
+            app:lottie_loop="true" />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_newlist"
             android:layout_width="match_parent"
