--- a/app/src/main/res/layout/grid_fragment1.xml
+++ b/app/src/main/res/layout/grid_fragment1.xml
@@ -2,7 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="100dp"
+        android:id="@+id/animation_view2"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="load.json"
+        app:lottie_loop="true" />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_grid1"
         android:layout_width="match_parent"
