--- a/app/src/main/res/layout/activity_fragment5.xml
+++ b/app/src/main/res/layout/activity_fragment5.xml
@@ -56,6 +56,54 @@
     </LinearLayout>
 
     <LinearLayout
+        android:visibility="gone"
+        android:layout_marginTop="25dp"
+        android:id="@+id/linear_login_visible"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:textSize="36dp"
+            android:textColor="#000"
+            android:layout_height="wrap_content"
+            android:text="환영합니다"/>
+        <TextView
+            android:id="@+id/text_myname"
+            android:text="aa"
+            android:textColor="#4585FF"
+            android:textSize="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/linear_gologout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/login_borderbox"
+        android:orientation="horizontal"
+        android:weightSum="100"
+        android:padding="20dp">
+
+        <TextView
+            android:layout_weight="90"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="로그아웃"
+            android:textColor="#4585FF"
+            android:textSize="30dp" />
+
+        <ImageView
+            android:layout_weight="10"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_baseline_navigate_next_24" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
