--- a/app/src/main/res/layout/activity_home__detail_things.xml
+++ b/app/src/main/res/layout/activity_home__detail_things.xml
@@ -22,6 +22,7 @@
 
 
                 <ImageView
+                    android:id="@+id/btn_things_backpress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />
