--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp">
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_grid1"
+            android:id="@+id/recycler_view_search"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
