--- a/app/src/main/res/layout/activity_hometab.xml
+++ b/app/src/main/res/layout/activity_hometab.xml
@@ -9,6 +9,7 @@
     android:elevation="10dp"
     tools:context=".hometab">
         <LinearLayout
+            android:layout_marginTop="24dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="#4585FF"
