--- a/app/src/main/res/layout/activitu_fragment4.xml
+++ b/app/src/main/res/layout/activitu_fragment4.xml
@@ -21,6 +21,8 @@
         android:background="#868e96" />
 
     <LinearLayout
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
