--- a/app/src/main/res/layout/activity_fragment3.xml
+++ b/app/src/main/res/layout/activity_fragment3.xml
@@ -141,12 +141,12 @@
                                 <ImageView
                                     android:layout_width="70dp"
                                     android:layout_height="70dp"
-                                    android:src="@drawable/ic_baseline_business_center_24" />
+                                    android:src="@drawable/ic_baseline_insert_chart_outlined_24" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="물품" />
+                                    android:text="권리·증권" />
 
                             </LinearLayout>
 
@@ -161,12 +161,12 @@
                                 <ImageView
                                     android:layout_width="70dp"
                                     android:layout_height="70dp"
-                                    android:src="@drawable/ic_baseline_insert_chart_outlined_24" />
+                                    android:src="@drawable/ic_baseline_fiber_new_24" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="권리·증권" />
+                                    android:text="신규 물건" />
 
                             </LinearLayout>
                         </LinearLayout>
