--- a/app/src/main/res/layout/activity_gradle6.xml
+++ b/app/src/main/res/layout/activity_gradle6.xml
@@ -34,6 +34,7 @@
         android:background="#868e96"
         android:layout_height="1dp"/>
     <LinearLayout
+        android:orientation="vertical"
         android:layout_weight="90"
         android:layout_width="match_parent"
         android:layout_height="0dp">
@@ -44,7 +45,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:visibility="gone"
+            android:visibility="visible"
             app:lottie_autoPlay="true"
             app:lottie_fileName="load.json"
             app:lottie_loop="true" />
