--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -20,6 +20,7 @@
             android:layout_gravity="center"
             android:src="@drawable/ic_baseline_keyboard_arrow_left_24_white" />
         <TextView
+            android:id="@+id/asd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="240dp"
@@ -39,6 +40,17 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp">
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="100dp"
+            android:id="@+id/animation_view_search"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="load.json"
+            app:lottie_loop="true" />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_search"
             android:layout_width="match_parent"
