--- a/app/src/main/res/layout/activity_home__detail_machine.xml
+++ b/app/src/main/res/layout/activity_home__detail_machine.xml
@@ -65,6 +65,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/machinep_MIN_BID_PRC"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="20"
@@ -91,6 +92,7 @@
                     android:src="@drawable/pngwing"/>
 
                 <Button
+                    android:id="@+id/btn_go_machine"
                     android:layout_weight="70"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
