--- a/app/src/main/res/layout/activity_fragment2.xml
+++ b/app/src/main/res/layout/activity_fragment2.xml
@@ -100,6 +100,7 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/search_1"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:padding="10dp"
